--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@ant-design/icons-vue": "^6.1.0",
         "ant-design-vue": "^3.2.13"
     }
 }
