--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/jetstream": "^2.12",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "spatie/laravel-permission": "^5.7",
         "staudenmeir/eloquent-has-many-deep": "^1.17",
         "tightenco/ziggy": "^1.0"
     },
