--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@ant-design/icons-vue": "^6.1.0",
-        "ant-design-vue": "^3.2.13"
+        "ant-design-vue": "^3.2.13",
+        "vue-draggable-next": "^2.1.1"
     }
 }
