--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/jetstream": "^2.12",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "spatie/laravel-medialibrary": "10.0.0",
         "spatie/laravel-permission": "^5.7",
         "staudenmeir/eloquent-has-many-deep": "^1.17",
         "tightenco/ziggy": "^1.0"
@@ -62,7 +63,8 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "phpstan/extension-installer": true
         }
     },
     "minimum-stability": "dev",
