--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/jetstream": "^2.12",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "mpdf/mpdf": "^8.2",
         "spatie/laravel-medialibrary": "10.0.0",
         "spatie/laravel-permission": "^5.7",
         "staudenmeir/eloquent-has-many-deep": "^1.17",
