--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "mpdf/mpdf": "^8.2",
         "spatie/laravel-medialibrary": "10.0.0",
         "spatie/laravel-permission": "^5.7",
+        "staudenmeir/belongs-to-through": "^2.5",
         "staudenmeir/eloquent-has-many-deep": "^1.17",
         "tightenco/ziggy": "^1.0"
     },
