--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@inertiajs/inertia": "^0.11.0",
-        "@inertiajs/inertia-vue3": "^0.6.0",
-        "@inertiajs/progress": "^0.2.7",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
         "@vitejs/plugin-vue": "^3.0.0",
@@ -22,6 +19,7 @@
     },
     "dependencies": {
         "@ant-design/icons-vue": "^6.1.0",
+        "@inertiajs/vue3": "^1.2.0",
         "ant-design-vue": "^4.2.3",
         "vue-draggable-next": "^2.1.1",
         "vue3-quill": "^0.3.1"
