--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@ant-design/icons-vue": "^6.1.0",
         "@inertiajs/vue3": "^1.2.0",
         "ant-design-vue": "^4.2.3",
+        "underscore": "^1.13.7",
         "vue-draggable-next": "^2.1.1",
         "vue3-quill": "^0.3.1"
     }
