--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
+        "@types/sortablejs": "^1.15.8",
         "@vitejs/plugin-vue": "^3.0.0",
         "autoprefixer": "^10.4.7",
         "axios": "^0.27",
@@ -21,8 +22,9 @@
         "@ant-design/icons-vue": "^6.1.0",
         "@inertiajs/vue3": "^1.2.0",
         "ant-design-vue": "^4.2.3",
+        "quill": "^2.0.3",
         "underscore": "^1.13.7",
-        "vue-draggable-next": "^2.1.1",
-        "vue3-quill": "^0.3.1"
+        "vue-advanced-cropper": "^2.8.9",
+        "vue-draggable-next": "^2.1.1"
     }
 }
